--- a/app/src/main/res/layout/item_todo_thing.xml
+++ b/app/src/main/res/layout/item_todo_thing.xml
@@ -5,34 +5,43 @@
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <CheckBox
-        android:id="@+id/cb_check_box"
-        android:layout_width="wrap_content"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/cl_main_info"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:checked="false"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"/>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
 
-    <TextView
-        android:id="@+id/tv_todo_label"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="할것들.."
-        app:layout_constraintStart_toEndOf="@id/cb_check_box"
-        app:layout_constraintEnd_toStartOf="@id/tv_delete"
-        app:layout_constraintTop_toTopOf="@id/cb_check_box"
-        app:layout_constraintBottom_toBottomOf="@id/cb_check_box" />
+        <CheckBox
+            android:id="@+id/cb_check_box"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:checked="false"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"/>
 
-    <TextView
-        android:id="@+id/tv_delete"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:paddingStart="10dp"
-        android:paddingEnd="10dp"
-        android:text="delete"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@id/cb_check_box"
-        app:layout_constraintBottom_toBottomOf="@id/cb_check_box" />
+        <TextView
+            android:id="@+id/tv_todo_label"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="할것들.."
+            app:layout_constraintStart_toEndOf="@id/cb_check_box"
+            app:layout_constraintEnd_toStartOf="@id/tv_delete"
+            app:layout_constraintTop_toTopOf="@id/cb_check_box"
+            app:layout_constraintBottom_toBottomOf="@id/cb_check_box" />
+
+        <TextView
+            android:id="@+id/tv_delete"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingStart="10dp"
+            android:paddingEnd="10dp"
+            android:text="delete"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@id/cb_check_box"
+            app:layout_constraintBottom_toBottomOf="@id/cb_check_box" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/cl_detail_info"
@@ -40,7 +49,8 @@
         android:layout_height="wrap_content"
         android:paddingTop="5dp"
         android:paddingBottom="5dp"
-        app:layout_constraintTop_toBottomOf="@id/cb_check_box"
+        android:visibility="gone"
+        app:layout_constraintTop_toBottomOf="@id/cl_main_info"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
 
@@ -53,43 +63,12 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"/>
 
-        <TextView
-            android:id="@+id/tv_type"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="10dp"
-            android:text="type"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintEnd_toStartOf="@id/sp_type_value"/>
-
         <Spinner
             android:id="@+id/sp_type_value"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="10dp"
-            android:entries="@string/app_name"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"/>
-
-        <EditText
-            android:id="@+id/et_edit_todo_item"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
-            app:layout_constraintTop_toBottomOf="@id/sp_type_value"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toStartOf="@id/tv_edit_done"/>
-
-        <TextView
-            android:id="@+id/tv_edit_done"
-            android:layout_width="wrap_content"
-            android:layout_height="0dp"
-            android:paddingStart="10dp"
-            android:paddingEnd="10dp"
-            android:text="edit"
-            android:gravity="center"
-            app:layout_constraintTop_toTopOf="@id/et_edit_todo_item"
-            app:layout_constraintBottom_toBottomOf="@id/et_edit_todo_item"
             app:layout_constraintEnd_toEndOf="parent"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
